--- a/css/styles.css
+++ b/css/styles.css
@@ -2,8 +2,17 @@
   margin: 0
 }
 
+ion-icon {
+font-size: 40px;
+}
+
 body{
   background-color:whitesmoke;
+}
+
+.not-a-container {
+  display: flex;
+  justify-content: center;
 }
 
 nav{
@@ -90,4 +99,67 @@ align-items:center;
   font-size:16px;
   border:none;
   width:100%
+}
+
+.stay-put {
+  position: fixed;
+
+}
+
+.right-side img {
+
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+
+.prof-info {
+ display: flex;
+  margin-top:70px;
+  margin-bottom: 15px;
+}
+
+.stories {
+  border: 1px solid lightgray;
+  background-color: white;
+  width: 250px;
+  height: 250px;
+  padding: 20px;
+}
+
+.stories-header {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 10px
+}
+
+.stories-content {
+  display: flex;
+}
+
+.stories-content img {
+  border: 3px solid pink;
+  padding: 2px;
+}
+
+
+
+
+
+
+
+
+@media screen and (max-width:1000px) {
+  .right-side {
+    display: none;
+  }
+
+
+
+
+
+
+
+
 }
